# Finch2

./: .gitignore  CMakeLists.txt  CODECONVENTION.md  README.md
.github/workflows/: ci.yml
src/: agent.cpp  agent.hpp  api_server.cpp  api_server.hpp  config.hpp  drone.hpp  dummy_drone.cpp  dummy_drone.hpp  globals.cppm  lifecycle.cppm  llm_http_backend.hpp  llm_server.cpp  llm_server.hpp  llm_service.cpp  llm_service.hpp  logger.hpp  main.cpp  px4_drone.cpp  px4_drone.hpp  server.cpp  server.hpp
src/behavior_tree/: action_node.cpp  action_node.hpp  behavior_tree.cpp  behavior_tree.hpp  btree.cpp  btree.hpp  composite_nodes.cpp  composite_nodes.hpp  move_node.cpp  move_node.hpp  node.cpp  node.hpp  node_catalog.cpp  node_catalog.hpp  node_descriptors.cpp  node_descriptors.hpp  task_node.cpp  task_node.hpp
src/behavior_tree/nodes/: action_node.cpp  action_node.hpp  fallback_node.cpp  fallback_node.hpp  node.cpp  node.hpp  parallel_node.cpp  parallel_node.hpp  sequence_node.cpp  sequence_node.hpp
src/behavior_tree/nodes/move_nodes/: go_to_node.cpp  go_to_node.hpp  land_node.cpp  land_node.hpp  move_node.cpp  move_node.hpp  move_to_node.cpp  move_to_node.hpp  takeoff_node.cpp  takeoff_node.hpp
src/behavior_tree/nodes/task_nodes/: task_node.cpp  task_node.hpp
src/drone/: dummy_drone.hpp  px4_drone.cpp
src/intents/: intent.hpp  intent_catalog.cpp  intent_catalog.hpp
src/llm_service/: llama_service.cpp  llama_service.hpp  llm_service.hpp
src/vehicle/: dummy_drone.cpp  dummy_drone.hpp  px4_drone.cpp  px4_drone.hpp  vehicle.hpp
tests/: btree_test.cpp
